[+] 修正错误的依赖下载地址